--- a/docs/bokeh/source/docs/releases/3.2.0.rst
+++ b/docs/bokeh/source/docs/releases/3.2.0.rst
@@ -10,5 +10,6 @@ Bokeh Version ``3.2.0`` (?? April 2023) is a minor milestone of Bokeh project.
 * Correctly resolve custom host and port with server resources (:bokeh-pull:`13041`)
 * Added support for ``HSpan``, ``VSpan``, ``HStrip`` and ``VStrip`` glyphs (:bokeh-pull:`12677`)
 * Added support for webgl rendering of ``Annulus``, ``Wedge`` and ``AnnularWedge`` (:bokeh-pull:`12704`)
+* Added support for ES modules (import and export syntax) to ``CustomJS`` (:bokeh-pull:`12812`)
 * Added support for configuring ``TapTool`` with key modifiers. Also allowed reporting key
   modifiers in ``TapTool``'s callbacks and pointer event (e.g. ``Tap``) callbacks (:bokeh-pull:`13132`)
