--- a/docs/bokeh/source/docs/releases/3.2.0.rst
+++ b/docs/bokeh/source/docs/releases/3.2.0.rst
@@ -3,7 +3,7 @@
 3.2.0
 =====
 
-Bokeh Version ``3.2.0`` (19 June 2023) is a minor milestone of Bokeh project.
+Bokeh Version ``3.2.0`` (June 2023) is a minor milestone of Bokeh project.
 
 * Official support for Python 3.8 was removed (:bokeh-pull:`12720`)
 * Added suport for ``Axis.axis_label_orientation`` property (:bokeh-pull:`13044`)
