--- a/docs/bokeh/source/docs/releases/3.4.0.rst
+++ b/docs/bokeh/source/docs/releases/3.4.0.rst
@@ -10,3 +10,5 @@ Bokeh version ``3.4.0`` (December 2023) is a minor milestone of Bokeh project.
 * ``BOKEH_DEV=true`` now defaults to server development resources (:bokeh-pull:`13042`)
 * ``ColorMap`` widget was renamed to ``PaletteSelect`` (:bokeh-pull:`13537`)
 * Enabled JavaScript's strict mode (``"use strict";``) in bokehjs' bundles (:bokeh-pull:`13523`)
+* Added support for xor selection mode and selection inversion (only for point selections) to select tools (:bokeh-pull:`13545`)
+* Changed the default selection mode of ``TapTool`` to ``"xor"`` to allow deselect with tap gesture (:bokeh-pull:`13545`)
