--- a/docs/bokeh/source/docs/releases/3.4.0.rst
+++ b/docs/bokeh/source/docs/releases/3.4.0.rst
@@ -12,3 +12,4 @@ Bokeh version ``3.4.0`` (December 2023) is a minor milestone of Bokeh project.
 * Enabled JavaScript's strict mode (``"use strict";``) in bokehjs' bundles (:bokeh-pull:`13523`)
 * Added support for xor selection mode and selection inversion (only for point selections) to select tools (:bokeh-pull:`13545`)
 * Changed the default selection mode of ``TapTool`` to ``"xor"`` to allow deselect with tap gesture (:bokeh-pull:`13545`)
+* Migrated bokehjs' bundles from ES2017 JavaScript standard to ES2020 (:bokeh-pull:`13565`)
