Rename Figure -> figure in examples/

--- a/examples/server/api/notebook_embed.ipynb
+++ b/examples/server/api/notebook_embed.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "    doc.theme = Theme(json=yaml.load(\"\"\"\n",
     "        attrs:\n",
-    "            Figure:\n",
+    "            figure:\n",
     "                background_fill_color: \"#DDDDDD\"\n",
     "                outline_line_color: white\n",
     "                toolbar_location: above\n",
