--- a/docs/bokeh/source/docs/releases/3.4.0.rst
+++ b/docs/bokeh/source/docs/releases/3.4.0.rst
@@ -15,3 +15,4 @@ Bokeh version ``3.4.0`` (December 2023) is a minor milestone of Bokeh project.
 * Changed the default selection mode of ``TapTool`` to ``"xor"`` to allow deselect with tap gesture (:bokeh-pull:`13545`)
 * Migrated bokehjs' bundles from ES2017 JavaScript standard to ES2020 (:bokeh-pull:`13565`)
 * Added support for non-visual glyph data property overrides (:bokeh-pull:`13554`)
+* Added support for ``Tool.visible`` property and deprecated ``InspectTool.toggleable`` (:bokeh-pull:`13593`)
