--- a/docs/bokeh/source/docs/releases/3.5.0.rst
+++ b/docs/bokeh/source/docs/releases/3.5.0.rst
@@ -16,3 +16,4 @@ Bokeh version ``3.5.0`` (May 2024) is a minor milestone of Bokeh project.
 * Added support for wheel zoom of renderers under the cursor when using sub-coordinates (:bokeh-pull:`13826`)
 * Added support for directory upload for ``FileInput`` (:bokeh-pull:`13873`)
 * Added support for formatters to ``ValueRef`` model and improved tooltip templating in ``HoverTool`` (:bokeh-pull:`13650`)
+* Added support for interaction handles (move, resize) to ``BoxAnnotation`` (:bokeh-pull:`13906`)
