--- a/docs/bokeh/source/docs/releases/3.6.0.rst
+++ b/docs/bokeh/source/docs/releases/3.6.0.rst
@@ -5,6 +5,7 @@
 
 Bokeh version ``3.6.0`` (??? 2024) is a minor milestone of Bokeh project.
 
+* Replaced data annotations with glyphs (:bokeh-pull:`13344`)
 * Improved streaming corner cases and added NumPy to ``bokeh info`` (:bokeh-pull:`14007`)
 * Added support for "open in a new tab" mode to ``SaveTool`` (:bokeh-pull:`14031`)
 * Allowed values of any type in ``GroupFilter.group`` and improved equality checking (:bokeh-pull:`14034`)
